--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h1>Todo App</h1>
+    <h1>My Daylist</h1>
 
     <!-- <div class="input-group">
         <input id="new-task" placeholder="Tulis tugas...">
