--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,16 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Todo App</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My Daylist</h1>
-
-    <!-- <div class="input-group">
-        <input id="new-task" placeholder="Tulis tugas...">
-        <label><input type="checkbox" id="pushover"> Kirim Notifikasi</label>
-        <button onclick="addTask()">Tambah</button>
-    </div> -->
 
     <div class="task-input-group">
         <input id="new-task" type="text" placeholder="Tambahkan tugas baru" />
