--- a/frontend/add_task.html
+++ b/frontend/add_task.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DayList | Add Task</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/addTask.css">
 </head>
 <body>
   <header>
@@ -20,7 +21,7 @@
 
   <section class="form-section">
     <h2>Plan Something New</h2>
-    <form id="task-form">
+    <form id="task-form" method="post" action="task.html">
       <label for="judul">Nama Tugas</label>
       <input type="text" id="judul" name="judul" required>
 
