--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register | DayList</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="css/signup.css">
 </head>
 <body>
   <div class="container">
@@ -16,6 +16,10 @@
         Yuk, catat semuanya di <strong>DayList</strong><br>
         Biar hidup lebih ringan, santai, dan terkendali.
       </p>
+      <p>
+    <strong>Download aplikasi <a href="https://pushover.net/" target="_blank">Pushover</a> terlebih dahulu</strong><br>
+      untuk menerima notifikasi langsung ke HP atau perangkatmu.
+    </p>
       <a href="login.html" class="btn-outline">Log In</a>
     </div>
 
