Menambahkan halaman pengenalan Cloud Computing untuk tugas

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,7 +2,8 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Biodata Diri</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pengenalan Cloud Computing</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,54 +12,84 @@
             padding: 0;
         }
 
-        .biodata-container {
-            max-width: 600px;
-            margin: 50px auto;
-            background-color: #fff;
-            border-radius: 12px;
-            padding: 30px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.1);
-        }
-
-        h1 {
+        header {
+            background-color: #005aa7;
+            color: white;
+            padding: 20px;
             text-align: center;
-            color: #333;
         }
 
-        .biodata-item {
-            margin: 15px 0;
+        .container {
+            max-width: 900px;
+            margin: 30px auto;
+            background-color: white;
+            padding: 25px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
 
-        .label {
-            font-weight: bold;
+        h2 {
+            color: #005aa7;
+            margin-top: 20px;
+        }
+
+        ul {
+            padding-left: 20px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px;
+            background-color: #f4f4f4;
+            margin-top: 40px;
         }
     </style>
 </head>
 <body>
 
-    <div class="biodata-container">
-        <h1>Biodata Diri</h1>
+    <header>
+        <h1>Apa Itu Cloud Computing?</h1>
+        <p>Pemanfaatan Teknologi Komputasi Awan</p>
+    </header>
 
-        <div class="biodata-item">
-            <span class="label">Nama:</span> Friska Amelia
-        </div>
+    <div class="container">
+        <section>
+            <h2>Definisi</h2>
+            <p>
+                Cloud computing (komputasi awan) adalah teknologi yang memungkinkan pengguna mengakses sumber daya komputasi (seperti server, penyimpanan, database, dan perangkat lunak) melalui internet.
+            </p>
+        </section>
 
-        <div class="biodata-item">
-            <span class="label">NIM:</span> F1G122003
-        </div>
+        <section>
+            <h2>Model Layanan</h2>
+            <ul>
+                <li><strong>IaaS (Infrastructure as a Service)</strong> – Contoh: AWS EC2, Google Compute Engine</li>
+                <li><strong>PaaS (Platform as a Service)</strong> – Contoh: Google App Engine, Heroku</li>
+                <li><strong>SaaS (Software as a Service)</strong> – Contoh: Google Docs, Dropbox</li>
+            </ul>
+        </section>
 
-        <div class="biodata-item">
-            <span class="label">Program Studi:</span> Ilmu komputer
-        </div>
+        <section>
+            <h2>Manfaat Cloud Computing</h2>
+            <ul>
+                <li>Efisiensi biaya</li>
+                <li>Skalabilitas</li>
+                <li>Akses data dari mana saja</li>
+                <li>Backup dan pemulihan data</li>
+            </ul>
+        </section>
 
-        <div class="biodata-item">
-            <span class="label">Universitas:</span> [Universitas Haluoleo]
-        </div>
-
-        <div class="biodata-item">
-            <span class="label">Email:</span> friskaamelia150@email.com
-        </div>
+        <section>
+            <h2>Contoh Penggunaan</h2>
+            <p>
+                Mahasiswa menggunakan Google Drive untuk menyimpan tugas, perusahaan mengelola server dengan AWS, dan tim pengembang membuat aplikasi dengan Firebase.
+            </p>
+        </section>
     </div>
+
+    <footer>
+        <p>&copy; 2025 Friska Amelia - Tugas Cloud Computing</p>
+    </footer>
 
 </body>
 </html>
