Menambahkan halaman tutorial HTML dasar untuk pemula

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -3,44 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pengenalan Cloud Computing</title>
+    <title>Tutorial HTML Dasar</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #eef2f3;
+            background-color: #f3f7fa;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #005aa7;
+            background-color: #0a74da;
             color: white;
             padding: 20px;
             text-align: center;
         }
 
         .container {
-            max-width: 900px;
+            max-width: 800px;
             margin: 30px auto;
             background-color: white;
             padding: 25px;
-            border-radius: 8px;
+            border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
 
-        h2 {
-            color: #005aa7;
-            margin-top: 20px;
+        pre {
+            background-color: #eee;
+            padding: 10px;
+            overflow-x: auto;
         }
 
-        ul {
-            padding-left: 20px;
+        h2 {
+            color: #0a74da;
+            margin-top: 20px;
         }
 
         footer {
             text-align: center;
-            padding: 15px;
-            background-color: #f4f4f4;
+            padding: 20px;
+            background-color: #ddd;
             margin-top: 40px;
         }
     </style>
@@ -48,47 +50,60 @@
 <body>
 
     <header>
-        <h1>Apa Itu Cloud Computing?</h1>
-        <p>Pemanfaatan Teknologi Komputasi Awan</p>
+        <h1>Tutorial HTML Dasar</h1>
+        <p>Belajar Tag-Tag HTML untuk Pemula</p>
     </header>
 
     <div class="container">
         <section>
-            <h2>Definisi</h2>
-            <p>
-                Cloud computing (komputasi awan) adalah teknologi yang memungkinkan pengguna mengakses sumber daya komputasi (seperti server, penyimpanan, database, dan perangkat lunak) melalui internet.
-            </p>
+            <h2>Apa itu HTML?</h2>
+            <p>HTML (HyperText Markup Language) adalah bahasa standar untuk membuat halaman web.</p>
         </section>
 
         <section>
-            <h2>Model Layanan</h2>
+            <h2>Contoh Struktur HTML</h2>
+            <pre>
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+  &lt;head&gt;
+    &lt;title&gt;Judul Halaman&lt;/title&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+    &lt;h1&gt;Halo Dunia!&lt;/h1&gt;
+    &lt;p&gt;Ini paragraf pertama.&lt;/p&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
+            </pre>
+        </section>
+
+        <section>
+            <h2>Tag-Tag Dasar</h2>
             <ul>
-                <li><strong>IaaS (Infrastructure as a Service)</strong> – Contoh: AWS EC2, Google Compute Engine</li>
-                <li><strong>PaaS (Platform as a Service)</strong> – Contoh: Google App Engine, Heroku</li>
-                <li><strong>SaaS (Software as a Service)</strong> – Contoh: Google Docs, Dropbox</li>
+                <li><strong>&lt;h1&gt; - &lt;h6&gt;</strong> : Judul (Heading)</li>
+                <li><strong>&lt;p&gt;</strong> : Paragraf</li>
+                <li><strong>&lt;a&gt;</strong> : Tautan (Link)</li>
+                <li><strong>&lt;img&gt;</strong> : Gambar</li>
+                <li><strong>&lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;</strong> : Daftar</li>
             </ul>
         </section>
 
         <section>
-            <h2>Manfaat Cloud Computing</h2>
-            <ul>
-                <li>Efisiensi biaya</li>
-                <li>Skalabilitas</li>
-                <li>Akses data dari mana saja</li>
-                <li>Backup dan pemulihan data</li>
-            </ul>
+            <h2>Contoh Tautan dan Gambar</h2>
+            <pre>
+&lt;a href="https://www.google.com"&gt;Kunjungi Google&lt;/a&gt;
+
+&lt;img src="gambar.jpg" alt="Contoh Gambar" width="200"&gt;
+            </pre>
         </section>
 
         <section>
-            <h2>Contoh Penggunaan</h2>
-            <p>
-                Mahasiswa menggunakan Google Drive untuk menyimpan tugas, perusahaan mengelola server dengan AWS, dan tim pengembang membuat aplikasi dengan Firebase.
-            </p>
+            <h2>Penutup</h2>
+            <p>HTML adalah dasar dari setiap halaman web. Dengan memahami struktur dan tag-nya, kamu sudah memulai langkah awal menjadi web developer.</p>
         </section>
     </div>
 
     <footer>
-        <p>&copy; 2025 Friska Amelia - Tugas Cloud Computing</p>
+        <p>&copy; 2025 Friska Amelia - Tutorial HTML Dasar</p>
     </footer>
 
 </body>
