--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,74 +2,79 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Form Kontak</title>
+    <title>Fitur Layanan Aplikasi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #eef2f3;
-            padding: 20px;
+            background-color: #f2f6f9;
+            padding: 30px;
         }
 
-        .form-container {
-            max-width: 500px;
+        table {
+            width: 90%;
             margin: auto;
-            background-color: #ffffff;
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-collapse: collapse;
+            background-color: #fff;
+            box-shadow: 0 0 5px rgba(0,0,0,0.1);
         }
 
-        h2 {
-            text-align: center;
+        caption {
+            caption-side: top;
+            font-size: 1.5em;
+            font-weight: bold;
+            margin-bottom: 10px;
             color: #0077cc;
         }
 
-        label {
-            display: block;
-            margin-top: 15px;
-            font-weight: bold;
+        th, td {
+            border: 1px solid #ddd;
+            padding: 12px;
+            text-align: left;
         }
 
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
+        th {
             background-color: #0077cc;
             color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
         }
 
-        button:hover {
-            background-color: #005fa3;
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
         }
     </style>
 </head>
 <body>
 
-    <div class="form-container">
-        <h2>Hubungi Kami</h2>
-        <form>
-            <label for="nama">Nama:</label>
-            <input type="text" id="nama" name="nama" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="pesan">Pesan:</label>
-            <textarea id="pesan" name="pesan" rows="5" required></textarea>
-
-            <button type="submit">Kirim</button>
-        </form>
-    </div>
+    <table>
+        <caption>Fitur Layanan Aplikasi</caption>
+        <thead>
+            <tr>
+                <th>Fitur</th>
+                <th>Deskripsi</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Login Pengguna</td>
+                <td>Pengguna dapat masuk menggunakan email dan password.</td>
+            </tr>
+            <tr>
+                <td>Upload Dokumen</td>
+                <td>Pengguna dapat mengunggah file seperti PDF atau gambar.</td>
+            </tr>
+            <tr>
+                <td>Notifikasi Otomatis</td>
+                <td>Sistem mengirimkan email pemberitahuan kepada pengguna.</td>
+            </tr>
+            <tr>
+                <td>Riwayat Aktivitas</td>
+                <td>Menampilkan catatan aktivitas pengguna dalam aplikasi.</td>
+            </tr>
+            <tr>
+                <td>Live Chat</td>
+                <td>Pengguna dapat bertanya langsung melalui fitur chat.</td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
 </html>
