--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,32 +2,24 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Fitur Layanan Aplikasi</title>
+    <title>Riwayat Pendidikan</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f6f9;
-            padding: 30px;
+            font-family: sans-serif;
+            background-color: #f5f5f5;
+            padding: 20px;
         }
 
         table {
-            width: 90%;
+            width: 80%;
             margin: auto;
             border-collapse: collapse;
-            background-color: #fff;
+            background: #fff;
             box-shadow: 0 0 5px rgba(0,0,0,0.1);
         }
 
-        caption {
-            caption-side: top;
-            font-size: 1.5em;
-            font-weight: bold;
-            margin-bottom: 10px;
-            color: #0077cc;
-        }
-
         th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #ccc;
             padding: 12px;
             text-align: left;
         }
@@ -37,41 +29,39 @@
             color: white;
         }
 
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
+        caption {
+            caption-side: top;
+            font-size: 1.5em;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
 
     <table>
-        <caption>Fitur Layanan Aplikasi</caption>
+        <caption>Riwayat Pendidikan</caption>
         <thead>
             <tr>
-                <th>Fitur</th>
-                <th>Deskripsi</th>
+                <th>Tingkat</th>
+                <th>Nama Sekolah</th>
+                <th>Tahun</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Login Pengguna</td>
-                <td>Pengguna dapat masuk menggunakan email dan password.</td>
+                <td>SD</td>
+                <td>SDN 1 Kendari</td>
+                <td>2009 - 2015</td>
             </tr>
             <tr>
-                <td>Upload Dokumen</td>
-                <td>Pengguna dapat mengunggah file seperti PDF atau gambar.</td>
+                <td>SMP</td>
+                <td>SMPN 2 Kendari</td>
+                <td>2015 - 2018</td>
             </tr>
             <tr>
-                <td>Notifikasi Otomatis</td>
-                <td>Sistem mengirimkan email pemberitahuan kepada pengguna.</td>
-            </tr>
-            <tr>
-                <td>Riwayat Aktivitas</td>
-                <td>Menampilkan catatan aktivitas pengguna dalam aplikasi.</td>
-            </tr>
-            <tr>
-                <td>Live Chat</td>
-                <td>Pengguna dapat bertanya langsung melalui fitur chat.</td>
+                <td>SMA</td>
+                <td>SMAN 3 Kendari</td>
+                <td>2018 - 2021</td>
             </tr>
         </tbody>
     </table>
