--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,69 +2,63 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Riwayat Pendidikan</title>
+    <title>Biodata Diri</title>
     <style>
         body {
-            font-family: sans-serif;
-            background-color: #f5f5f5;
-            padding: 20px;
+            font-family: Arial, sans-serif;
+            background-color: #eef2f3;
+            margin: 0;
+            padding: 0;
         }
 
-        table {
-            width: 80%;
-            margin: auto;
-            border-collapse: collapse;
-            background: #fff;
-            box-shadow: 0 0 5px rgba(0,0,0,0.1);
+        .biodata-container {
+            max-width: 600px;
+            margin: 50px auto;
+            background-color: #fff;
+            border-radius: 12px;
+            padding: 30px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
         }
 
-        th, td {
-            border: 1px solid #ccc;
-            padding: 12px;
-            text-align: left;
+        h1 {
+            text-align: center;
+            color: #333;
         }
 
-        th {
-            background-color: #0077cc;
-            color: white;
+        .biodata-item {
+            margin: 15px 0;
         }
 
-        caption {
-            caption-side: top;
-            font-size: 1.5em;
-            margin-bottom: 10px;
+        .label {
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
 
-    <table>
-        <caption>Riwayat Pendidikan</caption>
-        <thead>
-            <tr>
-                <th>Tingkat</th>
-                <th>Nama Sekolah</th>
-                <th>Tahun</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>SD</td>
-                <td>SDN 1 Kendari</td>
-                <td>2009 - 2015</td>
-            </tr>
-            <tr>
-                <td>SMP</td>
-                <td>SMPN 2 Kendari</td>
-                <td>2015 - 2018</td>
-            </tr>
-            <tr>
-                <td>SMA</td>
-                <td>SMAN 3 Kendari</td>
-                <td>2018 - 2021</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="biodata-container">
+        <h1>Biodata Diri</h1>
+
+        <div class="biodata-item">
+            <span class="label">Nama:</span> Dwi maiasarah
+        </div>
+
+        <div class="biodata-item">
+            <span class="label">NIM:</span> F1G122015
+        </div>
+
+        <div class="biodata-item">
+            <span class="label">Program Studi:</span> ilmu komputer
+        </div>
+
+        <div class="biodata-item">
+            <span class="label">Universitas:</span> [Universitas Haluoleo]
+        </div>
+
+        <div class="biodata-item">
+            <span class="label">Email:</span> biodata@email.com
+        </div>
+    </div>
 
 </body>
 </html>
