--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -40,11 +40,11 @@
         <h1>Biodata Diri</h1>
 
         <div class="biodata-item">
-            <span class="label">Nama:</span> Dwi maiasarah
+            <span class="label">Nama:</span> bayyinatun dwi sumatri
         </div>
 
         <div class="biodata-item">
-            <span class="label">NIM:</span> F1G122015
+            <span class="label">NIM:</span> F1G122001
         </div>
 
         <div class="biodata-item">
