Menambahkan elemen <header> dan navigasi

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <title>Website Contoh</title>
-</head>
-<body>
-</body>
-</html>
+<header>
+    <h1>Selamat Datang di Website Kami</h1>
+    <nav>
+        <a href="#tentang">Tentang</a>
+        <a href="#layanan">Layanan</a>
+        <a href="#kontak">Kontak</a>
+    </nav>
+</header>
