--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,8 +1,3 @@
-<header>
-    <h1>Selamat Datang di Website Kami</h1>
-    <nav>
-        <a href="#tentang">Tentang</a>
-        <a href="#layanan">Layanan</a>
-        <a href="#kontak">Kontak</a>
-    </nav>
-</header>
+<footer>
+    <p>&copy; 2025 Contoh Website. Semua Hak Dilindungi.</p>
+</footer>
