Menambahkan <main> dan satu section

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,3 +1,6 @@
-<footer>
-    <p>&copy; 2025 Contoh Website. Semua Hak Dilindungi.</p>
-</footer>
+<main>
+    <section id="tentang">
+        <h2>Tentang Kami</h2>
+        <p>Kami adalah tim pengembang aplikasi berbasis web dan mobile.</p>
+    </section>
+</main>
