Menambahkan metadata & viewport di <head>

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,6 +1,2 @@
-<main>
-    <section id="tentang">
-        <h2>Tentang Kami</h2>
-        <p>Kami adalah tim pengembang aplikasi berbasis web dan mobile.</p>
-    </section>
-</main>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Website Contoh HTML">
