Menambahkan form input (nama, email, pesan)

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,2 +1,18 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Website Contoh HTML">
+<section id="kontak">
+    <h2>Form Kontak</h2>
+    <form>
+        <div>
+            <label>Nama:</label>
+            <input type="text" name="nama">
+        </div>
+        <div>
+            <label>Email:</label>
+            <input type="email" name="email">
+        </div>
+        <div>
+            <label>Pesan:</label>
+            <textarea name="pesan"></textarea>
+        </div>
+        <button type="submit">Kirim</button>
+    </form>
+</section>
