Menambahkan tabel informasi pendidikan

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,18 +1,8 @@
-<section id="kontak">
-    <h2>Form Kontak</h2>
-    <form>
-        <div>
-            <label>Nama:</label>
-            <input type="text" name="nama">
-        </div>
-        <div>
-            <label>Email:</label>
-            <input type="email" name="email">
-        </div>
-        <div>
-            <label>Pesan:</label>
-            <textarea name="pesan"></textarea>
-        </div>
-        <button type="submit">Kirim</button>
-    </form>
+<section>
+    <h2>Riwayat Pendidikan</h2>
+    <table>
+        <tr><th>Tingkat</th><th>Institusi</th><th>Tahun</th></tr>
+        <tr><td>SMA</td><td>SMA Negeri 1 Kendari</td><td>2018-2021</td></tr>
+        <tr><td>Sarjana</td><td>Universitas Halu Oleo</td><td>2021-2025</td></tr>
+    </table>
 </section>
