Menambahkan tabel daftar tugas

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,8 +1,8 @@
 <section>
-    <h2>Riwayat Pendidikan</h2>
+    <h2>Daftar Tugas</h2>
     <table>
-        <tr><th>Tingkat</th><th>Institusi</th><th>Tahun</th></tr>
-        <tr><td>SMA</td><td>SMA Negeri 1 Kendari</td><td>2018-2021</td></tr>
-        <tr><td>Sarjana</td><td>Universitas Halu Oleo</td><td>2021-2025</td></tr>
+        <tr><th>No</th><th>Nama Tugas</th><th>Status</th></tr>
+        <tr><td>1</td><td>Proyek HTML</td><td>Selesai</td></tr>
+        <tr><td>2</td><td>Form Kontak</td><td>Dalam Proses</td></tr>
     </table>
 </section>
