--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,66 +2,68 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Produk Unggulan</title>
+  <title>Toko Online Friska</title>
   <style>
-    body { font-family: sans-serif; margin: 0; background: #f9f9f9; }
-    header { background: #0e76a8; color: white; text-align: center; padding: 40px 20px; }
+    body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
+    header { background: #e91e63; color: white; padding: 30px; text-align: center; }
     nav { background: #333; text-align: center; }
-    nav a { color: white; padding: 14px; display: inline-block; text-decoration: none; }
+    nav a { color: white; padding: 12px 18px; display: inline-block; text-decoration: none; }
     nav a:hover { background: #555; }
-    .fitur { display: flex; gap: 20px; padding: 20px; justify-content: center; flex-wrap: wrap; }
-    .fitur .card { background: white; padding: 20px; width: 250px; border-radius: 8px; box-shadow: 0 2px 5px #ccc; }
-    .fitur h3 { color: #0e76a8; }
-    .cta { background: #f1f1f1; text-align: center; padding: 30px; }
-    .cta button { background: #0e76a8; color: white; border: none; padding: 15px 30px; cursor: pointer; font-size: 16px; }
-    .testimoni { padding: 20px; background: #fff; text-align: center; }
-    footer { background: #0e76a8; color: white; text-align: center; padding: 15px; }
+    .kategori { padding: 10px; text-align: center; }
+    .kategori span { background: #eee; padding: 8px 12px; margin: 5px; border-radius: 4px; display: inline-block; }
+    .produk { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; }
+    .card { background: white; width: 200px; padding: 15px; border-radius: 8px; box-shadow: 0 2px 4px #ccc; text-align: center; }
+    .card img { width: 100%; height: 130px; object-fit: cover; border-radius: 4px; }
+    .card h3 { margin: 10px 0 5px; font-size: 16px; }
+    .card p { margin: 5px 0; }
+    .card button { background: #e91e63; color: white; border: none; padding: 8px 15px; cursor: pointer; border-radius: 4px; }
+    footer { background: #e91e63; color: white; text-align: center; padding: 20px; }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>SmartBottle</h1>
-  <p>Botol Pintar yang Menjaga Hidrasi Anda</p>
+  <h1>Toko Online Friska</h1>
+  <p>Belanja Mudah & Cepat</p>
 </header>
 
 <nav>
-  <a href="#fitur">Fitur</a>
-  <a href="#testimoni">Testimoni</a>
-  <a href="#beli">Beli</a>
+  <a href="#">Beranda</a>
+  <a href="#">Produk</a>
+  <a href="#">Kategori</a>
+  <a href="#">Kontak</a>
 </nav>
 
-<section id="fitur">
-  <h2 style="text-align:center;">Fitur Unggulan</h2>
-  <div class="fitur">
-    <div class="card">
-      <h3>Sensor Suhu</h3>
-      <p>Menampilkan suhu air secara real-time.</p>
-    </div>
-    <div class="card">
-      <h3>Pengingat Minum</h3>
-      <p>Bergetar setiap 2 jam untuk mengingatkan Anda minum.</p>
-    </div>
-    <div class="card">
-      <h3>Konektivitas App</h3>
-      <p>Terkoneksi dengan aplikasi ponsel Anda.</p>
-    </div>
+<section class="kategori">
+  <span>Pakaian</span>
+  <span>Elektronik</span>
+  <span>Kecantikan</span>
+  <span>Perlengkapan Rumah</span>
+</section>
+
+<section class="produk">
+  <div class="card">
+    <img src="https://via.placeholder.com/200x130?text=Produk+1" alt="Produk 1">
+    <h3>Jam Tangan</h3>
+    <p>Rp150.000</p>
+    <button>Beli</button>
+  </div>
+  <div class="card">
+    <img src="https://via.placeholder.com/200x130?text=Produk+2" alt="Produk 2">
+    <h3>Headphone</h3>
+    <p>Rp300.000</p>
+    <button>Beli</button>
+  </div>
+  <div class="card">
+    <img src="https://via.placeholder.com/200x130?text=Produk+3" alt="Produk 3">
+    <h3>Sepatu Wanita</h3>
+    <p>Rp220.000</p>
+    <button>Beli</button>
   </div>
 </section>
 
-<section class="testimoni" id="testimoni">
-  <h2>Apa Kata Mereka?</h2>
-  <p>"Botol ini membantu saya tetap sehat dan terhidrasi!" - Rina</p>
-  <p>"Sangat berguna untuk pekerja kantoran." - Dodi</p>
-</section>
-
-<section class="cta" id="beli">
-  <h2>Dapatkan SmartBottle Sekarang!</h2>
-  <button>Beli Sekarang</button>
-</section>
-
 <footer>
-  <p>&copy; 2025 SmartBottle Indonesia</p>
+  <p>&copy; 2025 Friska Store. All Rights Reserved.</p>
 </footer>
 
 </body>
