--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,69 +2,25 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Toko Online Friska</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
-    header { background: #e91e63; color: white; padding: 30px; text-align: center; }
-    nav { background: #333; text-align: center; }
-    nav a { color: white; padding: 12px 18px; display: inline-block; text-decoration: none; }
-    nav a:hover { background: #555; }
-    .kategori { padding: 10px; text-align: center; }
-    .kategori span { background: #eee; padding: 8px 12px; margin: 5px; border-radius: 4px; display: inline-block; }
-    .produk { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; }
-    .card { background: white; width: 200px; padding: 15px; border-radius: 8px; box-shadow: 0 2px 4px #ccc; text-align: center; }
-    .card img { width: 100%; height: 130px; object-fit: cover; border-radius: 4px; }
-    .card h3 { margin: 10px 0 5px; font-size: 16px; }
-    .card p { margin: 5px 0; }
-    .card button { background: #e91e63; color: white; border: none; padding: 8px 15px; cursor: pointer; border-radius: 4px; }
-    footer { background: #e91e63; color: white; text-align: center; padding: 20px; }
-  </style>
+  <title>Survey Pendapat</title>
 </head>
 <body>
+  <h2>Survey Pendapat Anda</h2>
+  <form>
+    <label>Nama:</label><br>
+    <input type="text" name="nama"><br><br>
 
-<header>
-  <h1>Toko Online Friska</h1>
-  <p>Belanja Mudah & Cepat</p>
-</header>
+    <label>Umur:</label><br>
+    <input type="number" name="umur"><br><br>
 
-<nav>
-  <a href="#">Beranda</a>
-  <a href="#">Produk</a>
-  <a href="#">Kategori</a>
-  <a href="#">Kontak</a>
-</nav>
+    <label>Apakah Anda puas dengan layanan kami?</label><br>
+    <input type="radio" name="puas" value="ya"> Ya
+    <input type="radio" name="puas" value="tidak"> Tidak<br><br>
 
-<section class="kategori">
-  <span>Pakaian</span>
-  <span>Elektronik</span>
-  <span>Kecantikan</span>
-  <span>Perlengkapan Rumah</span>
-</section>
+    <label>Komentar:</label><br>
+    <textarea name="komentar"></textarea><br><br>
 
-<section class="produk">
-  <div class="card">
-    <img src="https://via.placeholder.com/200x130?text=Produk+1" alt="Produk 1">
-    <h3>Jam Tangan</h3>
-    <p>Rp150.000</p>
-    <button>Beli</button>
-  </div>
-  <div class="card">
-    <img src="https://via.placeholder.com/200x130?text=Produk+2" alt="Produk 2">
-    <h3>Headphone</h3>
-    <p>Rp300.000</p>
-    <button>Beli</button>
-  </div>
-  <div class="card">
-    <img src="https://via.placeholder.com/200x130?text=Produk+3" alt="Produk 3">
-    <h3>Sepatu Wanita</h3>
-    <p>Rp220.000</p>
-    <button>Beli</button>
-  </div>
-</section>
-
-<footer>
-  <p>&copy; 2025 Friska Store. All Rights Reserved.</p>
-</footer>
-
+    <button type="submit">Kirim</button>
+  </form>
 </body>
 </html>
