--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,24 +2,16 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Pemesanan Produk</title>
+  <title>Portofolio Saya</title>
 </head>
 <body>
-  <h2>Formulir Pemesanan Produk</h2>
-  <form>
-    <label>Nama Produk:</label><br>
-    <input type="text" name="produk"><br><br>
-
-    <label>Jumlah:</label><br>
-    <input type="number" name="jumlah"><br><br>
-
-    <label>Nama Pemesan:</label><br>
-    <input type="text" name="nama"><br><br>
-
-    <label>Alamat Pengiriman:</label><br>
-    <textarea name="alamat"></textarea><br><br>
-
-    <button type="submit">Pesan Sekarang</button>
-  </form>
+  <h2>Portofolio Proyek</h2>
+  <ul>
+    <li><strong>Project 1:</strong> Website CV - HTML & CSS</li>
+    <li><strong>Project 2:</strong> Sistem Informasi Perpustakaan</li>
+    <li><strong>Project 3:</strong> Aplikasi To-Do List</li>
+    <li><strong>Project 4:</strong> Website Toko Online</li>
+    <li><strong>Project 5:</strong> Dashboard Admin PHP</li>
+  </ul>
 </body>
 </html>
