Daftar Project dengan Deskripsi Singkat

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,16 +2,21 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Portofolio Saya</title>
+  <title>Daftar Proyek</title>
 </head>
 <body>
-  <h2>Portofolio Proyek</h2>
-  <ul>
-    <li><strong>Project 1:</strong> Website CV - HTML & CSS</li>
-    <li><strong>Project 2:</strong> Sistem Informasi Perpustakaan</li>
-    <li><strong>Project 3:</strong> Aplikasi To-Do List</li>
-    <li><strong>Project 4:</strong> Website Toko Online</li>
-    <li><strong>Project 5:</strong> Dashboard Admin PHP</li>
-  </ul>
+  <h2>Daftar Proyek</h2>
+  <div>
+    <h3>Website Profil</h3>
+    <p>Website sederhana menggunakan HTML dan CSS.</p>
+  </div>
+  <div>
+    <h3>Sistem Pendaftaran Online</h3>
+    <p>Dibuat menggunakan PHP dan MySQL untuk sekolah.</p>
+  </div>
+  <div>
+    <h3>Aplikasi Mobile Catatan</h3>
+    <p>Proyek dengan React Native untuk mencatat kegiatan.</p>
+  </div>
 </body>
 </html>
