Formulir Pengajuan Judul Skripsi

--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,22 +1,26 @@
+<!-- ✅ Formulir Pengajuan Judul Skripsi -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Daftar Proyek</title>
+  <title>Pengajuan Judul Skripsi</title>
 </head>
 <body>
-  <h2>Daftar Proyek</h2>
-  <div>
-    <h3>Website Profil</h3>
-    <p>Website sederhana menggunakan HTML dan CSS.</p>
-  </div>
-  <div>
-    <h3>Sistem Pendaftaran Online</h3>
-    <p>Dibuat menggunakan PHP dan MySQL untuk sekolah.</p>
-  </div>
-  <div>
-    <h3>Aplikasi Mobile Catatan</h3>
-    <p>Proyek dengan React Native untuk mencatat kegiatan.</p>
-  </div>
+  <h2>Formulir Pengajuan Judul Skripsi</h2>
+  <form>
+    <label>Nama Mahasiswa:</label><br>
+    <input type="text" name="nama"><br><br>
+
+    <label>NIM:</label><br>
+    <input type="text" name="nim"><br><br>
+
+    <label>Judul Skripsi:</label><br>
+    <textarea name="judul"></textarea><br><br>
+
+    <label>Dosen Pembimbing:</label><br>
+    <input type="text" name="dosen"><br><br>
+
+    <button type="submit">Ajukan</button>
+  </form>
 </body>
 </html>
